--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         .container {
-            background-color: rgba(38, 33, 82, 0.8); /* Slight transparency for background */
+            background-color: rgba(38, 33, 82, 0.8);
             border-radius: 10px;
             padding: 20px;
             width: 70%;
