--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
             <div id="school2" class="school-images" style="display: none;">
                 <h4>high school</h4>
-                <img src="schoolb.jpg" alt="Gathera Highschool">
+                <img src="C:\Users\PC\OneDrive\Pictures\IMG_20250327_223844.jpg" alt="Gathera Highschool">
             </div>
 
             <div id="school3" class="school-images" style="display: none;">
